crates/manifest/tests/ui/invalid/bad_kebab_component_ref.err
TOML parse error at line 7, column 13
  |
7 | component = "1-2-3"
  |             ^^^^^^^
'-'-separated words must start with an ASCII letter; got '1'

